@@ -3,6 +3,9 @@
 	* gtksourceview/gtksourcecontextengine.c: added some documentation
 	* gtksourceview/gtksourcecontextengine.c: (regex_get_pattern): do not
 	crash if the regex is unresolved
+	* gtksourceview/gtksourcecontextengine.c,
+	gtksourceview/gtksourcelanguage-parser-2.c: removed declarations mixed
+	with code
 
 2006-01-16  Marco Barisione  <barisione@gmail.com>
 
